# evmg

./: .flake8  .gitignore  Cargo.toml  README.md  README_J.md
src/: args.rs  envvar.rs  json.rs  main.rs  settings.rs  shellrc.rs  utils.rs
tests/it/: requirements.txt
tests/it/lib/: base_test.py  utils.py
tests/it/tests/: test_export.py  test_version.py
