[package]
name = "envvar"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "environment variable manager"
repository = "https://github.com/s-aran/evmg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termcolor = "1.1.3"
libc = "0.2"
clap = { version = "4.5" }

[dependencies.windows-sys]
version = "0.59"
features = [
  "Win32_Foundation",
  "Win32_System_Registry",
  "Win32_System_Environment",
]
